--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-title: Slate theme
-description: Slate is a theme for GitHub Pages.
-show_downloads: true
+title: Zuzana Hofmanová
+description: Postdoctoral Researcher
 google_analytics:
 theme: jekyll-theme-slate
