--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Zuzana Hofmanová
-description: Personal website of Zuzana Hofmanová, Postdoctoral Researcher at University of Fribourg, Department of Biology.
+description: Personal website of Dr. rer. nat. Zuzana Hofmanová, Postdoctoral Researcher at University of Fribourg, Department of Biology.
 google_analytics:
 theme: jekyll-theme-slate
