Add content and header links

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-title: Slate theme
-description: Slate is a theme for GitHub Pages.
-show_downloads: true
+title: Zuzana Hofmanová
+description: Personal website of Zuzana Hofmanová, Postdoctoral Researcher at University of Fribourg, Department of Biology.
 google_analytics:
 theme: jekyll-theme-slate
